Command line to Atom XML output complete
This version also has the start of the process for Serverless support.
See [Starting a Python-oriented Serverless-dot-com Project | Disruptive
Library Technology
Jester](https://dltj.org/article/starting-python-serverless-project/)
for details.

--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,14 @@ name = "pypi"
 [packages]
 click = "*"
 beautifulsoup4 = "*"
+requests = "*"
+selenium = "*"
+jinja2 = "*"
 
 [dev-packages]
 black = "*"
 pylint = "*"
+nodeenv = "*"
 
 [requires]
 python_version = "3.11"
