--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.serverless
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -160,3 +162,4 @@ cython_debug/
 #.idea/
 .vscode
 node_modules
+!.vscode/launch.json
